# sistema-riego-inteligente

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  main.py
backend/app/services/: dataset_service.py  predictor.py
backend/tests/: test_auth.py  test_dataset_service.py
data/: README.md
docs/: acceptance_report.md  guia_usuario.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
ml/: requirements.txt
ml/src/irrigation_ml/: __init__.py  cli.py  data.py  evaluation.py  models.py  reports.py  training.py
ml/src/smart_irrigation_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ml/tests/: test_data.py  test_evaluation.py
scripts/: bootstrap.py  download_data.py  generate_reports.py  rebuild_analysis_artifacts.py  train.py
streamlit_app/: Dockerfile  app.py
